--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="display"></div>
     <div class="form">
-      <form action="index.html" method="post">
+      <form action="">
         <div class="title">
           <label for="title">Title</label>
           <input type="text" name="title" id="title" required />
@@ -31,7 +31,7 @@
           <input type="radio" name="read" id="no" value="no" />
           <label for="no">No</label>
         </div>
-        <button type="submit">Add Book</button>
+        <button type="submit" id="submit">Add Book</button>
       </form>
     </div>
   </body>
